--- a/Coco/Coco.xcodeproj/xcshareddata/xcschemes/CocoPresent.xcscheme
+++ b/Coco/Coco.xcodeproj/xcshareddata/xcschemes/CocoPresent.xcscheme
@@ -15,10 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6F3E3E302E52E37D006F453B"
+               BlueprintIdentifier = "6F3E3F322E52FF28006F453B"
                BuildableName = "CocoPresent.framework"
                BlueprintName = "CocoPresent"
-               ReferencedContainer = "container:Coco.xcodeproj">
+               ReferencedContainer = "container:../CocoPresent/CocoPresent.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -50,10 +50,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6F3E3E302E52E37D006F453B"
+            BlueprintIdentifier = "6F3E3F322E52FF28006F453B"
             BuildableName = "CocoPresent.framework"
             BlueprintName = "CocoPresent"
-            ReferencedContainer = "container:Coco.xcodeproj">
+            ReferencedContainer = "container:../CocoPresent/CocoPresent.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
